community/chezmoi: upgrade to 1.7.15

--- a/community/chezmoi/APKBUILD
+++ b/community/chezmoi/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Kevin Daudt <kdaudt@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname="chezmoi"
-pkgver=1.7.14
+pkgver=1.7.15
 pkgrel=0
 pkgdesc="Manage your dotfiles across multiple machines, securely."
 url="https://www.chezmoi.io/"
@@ -47,7 +47,7 @@ bashcomp() {
 	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
 
 	cd "$builddir"
-	install -Dm0644 assets/completions/chezmoi-completion.bash \
+	install -Dm0644 completions/chezmoi-completion.bash \
 		"$subpkgdir"/usr/share/bash-completion/completions/$pkgname
 }
 
@@ -57,7 +57,7 @@ zshcomp() {
 	install_if="$pkgname=$pkgver-r$pkgrel zsh"
 
 	cd "$builddir"
-	install -Dm0644 assets/completions/chezmoi.zsh \
+	install -Dm0644 completions/chezmoi.zsh \
 		"$subpkgdir"/usr/share/zsh/site-functions/_$pkgname
 }
 
@@ -67,7 +67,7 @@ fishcomp() {
 	install_if="$pkgname=$pkgver-r$pkgrel fish"
 
 	cd "$builddir"
-	install -Dm0644 assets/completions/chezmoi.fish \
+	install -Dm0644 completions/chezmoi.fish \
 		"$subpkgdir"/usr/share/fish/site-functions/_$pkgname
 }
 
@@ -76,4 +76,4 @@ cleanup_srcdir() {
 	default_cleanup_srcdir
 }
 
-sha512sums="dccffe985e5faddfbfb38d20d1962c68c4922c3dcc23c4d760d6cfc9feb5deb51e39deb1c4a29bc4d6a688aaed9179511fb01cb9dfc47483dafd423bcf2928fe  chezmoi-1.7.14.tar.gz"
+sha512sums="2c64a01a8313377cb75341dab7342ccd506cbcaab5454c64bf3015ae399bc71db8ef1e717af25fb6a26e03ea325f020c0206e2acd8f62102690dff8bf3c02be2  chezmoi-1.7.15.tar.gz"
