main/libnotify: upgrade to 0.7.9

--- a/main/libnotify/APKBUILD
+++ b/main/libnotify/APKBUILD
@@ -1,24 +1,24 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libnotify
-pkgver=0.7.8
+pkgver=0.7.9
 pkgrel=0
 pkgdesc="Desktop notification library"
 url="https://developer.gnome.org/notification-spec/"
 arch="all"
 options="!check" # No tests defined when building with meson.
 license="LGPL-2.1-or-later"
-subpackages="$pkgname-dev $pkgname-doc"
-makedepends="meson gdk-pixbuf-dev dbus-dev gtk+3.0-dev gobject-introspection-dev xmlto"
-source="https://download.gnome.org/sources/${pkgname}/${pkgver%.*}/${pkgname}-${pkgver}.tar.xz"
+makedepends="meson gdk-pixbuf-dev dbus-dev gtk+3.0-dev gobject-introspection-dev"
+subpackages="$pkgname-dev"
+source="https://download.gnome.org/sources/libnotify/${pkgver%.*}/libnotify-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	meson \
 		--prefix=/usr \
 		-Dtests=true \
 		-Dintrospection=enabled \
 		-Dgtk_doc=false \
+		-Dman=false \
 		output
 	ninja -C output
 }
@@ -28,7 +28,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C output install
 }
-sha512sums="9973d7a1af5dd7cfbaa0d0d2c9e72a40df9d814967fde47e95763a69690cc4ed32ecf713d75f91f3dff99a693eff9dab963be124e0530ebf231d517a44e75e94  libnotify-0.7.8.tar.xz"
+sha512sums="8a842b50777279efdb7d96a836a546c47decad158a4f03f7ffc818860d1f6276a657619e4f4a19a4e2f5ad55e0371c793420d50d802983700e8c342273b73874  libnotify-0.7.9.tar.xz"
