community/sdl2_image: fix license=

--- a/community/sdl2_image/APKBUILD
+++ b/community/sdl2_image/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=sdl2_image
 pkgver=2.0.5
-pkgrel=1
+pkgrel=2
 _pkgname=SDL2_image
 pkgdesc="A simple library to load images of various formats as SDL surfaces"
 url="http://www.libsdl.org/projects/SDL_image/"
 arch="all"
-license="zlib"
+license="Zlib"
 makedepends="sdl2-dev libpng-dev libjpeg-turbo-dev
 	libwebp-dev tiff-dev zlib-dev"
 subpackages="$pkgname-dev"
@@ -28,7 +28,6 @@ builddir="$srcdir/$_pkgname-$pkgver"
 #     - CVE-2017-14450 TALOS-2017-0499
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -43,12 +42,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
