community/sdl2_mixer: modernize

--- a/community/sdl2_mixer/APKBUILD
+++ b/community/sdl2_mixer/APKBUILD
@@ -2,13 +2,12 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=sdl2_mixer
 pkgver=2.0.4
-pkgrel=0
+pkgrel=1
 _pkgname=SDL2_mixer
 pkgdesc="A simple multi-channel audio mixer"
 url="http://www.libsdl.org/projects/SDL_mixer/"
 arch="all"
-license="zlib"
-depends=""
+license="Zlib"
 makedepends="sdl2-dev libvorbis-dev libmikmod-dev
 	libmodplug-dev flac-dev linux-headers"
 subpackages="$pkgname-dev"
@@ -17,7 +16,7 @@ source="https://www.libsdl.org/projects/SDL_mixer/release/$_pkgname-$pkgver.tar.
 builddir="$srcdir/$_pkgname-$pkgver"
 
 prepare() {
-	cd "$builddir"
+	default_prepare
 	update_config_sub
 
 	sed -e "/CONFIG_FILE_ETC/s/\/etc\/timidity.cfg/\/etc\/timidity++\/timidity.cfg/" \
@@ -27,7 +26,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -40,7 +38,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
