community/libguess: modernize

--- a/community/libguess/APKBUILD
+++ b/community/libguess/APKBUILD
@@ -11,17 +11,15 @@ options="!check"  # Test suite requires package to be installed first
 license="ISC"
 makedepends="libmowgli-dev autoconf"
 subpackages="$pkgname-dev"
-source="http://rabbit.dereferenced.org/~nenolod/distfiles/$pkgname-$pkgver.tar.bz2"
+source="http://rabbit.dereferenced.org/~nenolod/distfiles/libguess-$pkgver.tar.bz2"
 
 prepare() {
-	cd "$builddir"
 	update_config_sub
 	default_prepare
 	autoconf
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -33,7 +31,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
