community/vte3: modernize

--- a/community/vte3/APKBUILD
+++ b/community/vte3/APKBUILD
@@ -16,30 +16,23 @@ source="https://download.gnome.org/sources/vte/${pkgver%.*}/vte-$pkgver.tar.xz
 	vte-ng.patch"
 builddir="$srcdir/vte-$pkgver"
 
-prepare() {
-	default_prepare
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir/build"
 	meson \
 		--buildtype=plain \
 		-Ddocs=false \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--libexecdir=/usr/lib/$pkgname \
-		..
-	ninja
+		. output
+	ninja -C output
 }
 
 check() {
-	meson test -C build --print-errorlogs
+	ninja -C output test
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" ninja install
+	DESTDIR="$pkgdir" ninja -C output install
 }
 sha512sums="b0a38eb1cd7d923b0431af943dbdb89932833f9a2b0b8fc1fa9ee728c87418c1f5a424b2ccee661721093a80c569f3b41c721b0ba2302ba0c3a42d4c5e31aa9a  vte-0.58.3.tar.xz
 94de7160b71f1c41aa19e8f9dc4538cd493da1a33dda6482c332f8e8932213631ccc2355506a616772dae451d653f035c66c721bd839570d6cb55e4d2b12e8a3  fix-W_EXITCODE.patch
