main/librevenge: modernize

--- a/main/librevenge/APKBUILD
+++ b/main/librevenge/APKBUILD
@@ -2,21 +2,17 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=librevenge
 pkgver=0.0.4
-pkgrel=3
+pkgrel=4
 pkgdesc="Base library for writing document import filters"
 url="https://sourceforge.net/projects/libwpd/"
 arch="all"
 license="MPL-2.0"
-depends=""
 depends_dev="boost-dev zlib-dev cppunit-dev"
 makedepends="$depends_dev doxygen"
-install=""
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://sourceforge.net/projects/libwpd/files/$pkgname/$pkgname-$pkgver/$pkgname-$pkgver.tar.xz"
+source="https://sourceforge.net/projects/libwpd/files/librevenge/librevenge-$pkgver/librevenge-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
-
 	# workaround for boost-1.59
 	# http://sourceforge.net/p/libwpd/tickets/6/
 	# http://sourceforge.net/p/libwpd/librevenge/ci/0beee70d1bf52f0d81b60ee8c373e477991fe546/
@@ -37,12 +33,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
