--- a/community/libmms/APKBUILD
+++ b/community/libmms/APKBUILD
@@ -10,17 +10,14 @@ options="!check"  # No test suite.
 license="LGPL-2.0-or-later"
 makedepends="glib-dev"
 subpackages="$pkgname-dev"
-source="https://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz
-"
+source="https://downloads.sourceforge.net/libmms/libmms-$pkgver.tar.gz"
 
 prepare() {
-	cd "$builddir"
 	update_config_sub
 	default_prepare
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -33,7 +30,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
