--- a/community/libcdio-paranoia/APKBUILD
+++ b/community/libcdio-paranoia/APKBUILD
@@ -9,19 +9,17 @@ arch="all"
 license="GPL-2.0-or-later and LGPL-2.0-or-later"
 makedepends="libcdio-dev autoconf automake libtool"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://ftp.gnu.org/gnu/libcdio/$pkgname-$_pkgver.tar.bz2"
+source="https://ftp.gnu.org/gnu/libcdio/libcdio-paranoia-$_pkgver.tar.bz2"
 builddir="$srcdir/$pkgname-$_pkgver"
 
 prepare() {
 	default_prepare
 
-	cd "$builddir"
 	sed -i 's/AM_CONFIG_HEADER/AC_CONFIG_HEADER/;s/$1+$2/$2/' configure.ac
 	autoreconf -i
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -35,12 +33,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
