community/libiptcdata: modernize

--- a/community/libiptcdata/APKBUILD
+++ b/community/libiptcdata/APKBUILD
@@ -9,7 +9,7 @@ url="https://github.com/ianw/libiptcdata"
 arch="all"
 license="LGPL-2.0-or-later"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://github.com/ianw/$pkgname/releases/download/release_$_relver/$pkgname-$pkgver.tar.gz"
+source="https://github.com/ianw/libiptcdata/releases/download/release_$_relver/libiptcdata-$pkgver.tar.gz"
 
 build() {
 	./configure \
