community/libmpeg2: modernize

--- a/community/libmpeg2/APKBUILD
+++ b/community/libmpeg2/APKBUILD
@@ -13,7 +13,6 @@ source="https://gentoo.osuosl.org/distfiles/libmpeg2-$pkgver.tar.gz
 	arm-textrel.patch
 	"
 
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
 	update_config_sub
@@ -21,7 +20,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,18 +27,16 @@ build() {
 		--with-pic \
 		--enable-shared \
 		--disable-static
-	make OPT_CFLAGS="${CFLAGS}" \
-		MPEG2DEC_CFLAGS="${CFLAGS}" \
+	make OPT_CFLAGS="$CFLAGS" \
+		MPEG2DEC_CFLAGS="$CFLAGS" \
 		LIBMPEG2_CFLAGS=""
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
