community/libass: modernize

--- a/community/libass/APKBUILD
+++ b/community/libass/APKBUILD
@@ -10,23 +10,20 @@ pkgdesc="Portable library for SSA/ASS subtitle rendering"
 url="https://github.com/libass/libass"
 arch="all"
 license="ISC"
-depends=""
 depends_dev="enca-dev fontconfig-dev fribidi-dev freetype-dev"
 makedepends="$depends_dev"
 subpackages="$pkgname-dev"
-source="https://github.com/libass/libass/releases/download/$pkgver/$pkgname-$pkgver.tar.xz"
+source="https://github.com/libass/libass/releases/download/$pkgver/libass-$pkgver.tar.xz"
 
-builddir="$srcdir"/$pkgname-$pkgver
 
 # secfixes:
 #   0.13.4-r0:
-#   - CVE-2016-7969
-#   - CVE-2016-7970
-#   - CVE-2016-7971
-#   - CVE-2016-7972
+#     - CVE-2016-7969
+#     - CVE-2016-7970
+#     - CVE-2016-7971
+#     - CVE-2016-7972
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -39,7 +36,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
