--- a/community/liboping/APKBUILD
+++ b/community/liboping/APKBUILD
@@ -7,26 +7,21 @@ pkgdesc="A C library to generate ICMP echo requests"
 url="http://verplant.org/liboping/"
 arch="all"
 license="LGPL-2.0-or-later"
-depends=""
 makedepends="ncurses-dev"
 subpackages="$pkgname-dev $pkgname-doc"
-source="http://verplant.org/liboping/files/$pkgname-$pkgver.tar.bz2"
-builddir="$srcdir/$pkgname-$pkgver"
+source="http://verplant.org/liboping/files/liboping-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--prefix=/usr \
 		--libdir=/usr/lib \
 		--without-perl-bindings \
-		--disable-static \
-		|| return 1
-	make || return 1
+		--disable-static
+	make
 }
 
 package() {
-	cd "$builddir"
-	make install DESTDIR="$pkgdir" || return 1
+	make install DESTDIR="$pkgdir"
 }
 
 sha512sums="f1e9984cf0c1df89b29f7bc657c19a5439019db7643680744d8f353664b6a53070581f40b51e72f896c7df88799c6868257f6308e1a9d84b4d2a0666491214d8  liboping-1.10.0.tar.bz2"
