--- a/community/libcroco/APKBUILD
+++ b/community/libcroco/APKBUILD
@@ -8,7 +8,7 @@ arch="all"
 license="LGPL-2.1-only"
 subpackages="$pkgname-dev $pkgname-doc"
 makedepends="glib-dev libxml2-dev"
-source="https://download.gnome.org/sources/$pkgname/0.6/$pkgname-$pkgver.tar.xz
+source="https://download.gnome.org/sources/libcroco/0.6/libcroco-$pkgver.tar.xz
 	CVE-2017-8871-and-CVE-2017-8834.patch
 	"
 
@@ -20,7 +20,6 @@ source="https://download.gnome.org/sources/$pkgname/0.6/$pkgname-$pkgver.tar.xz
 #     - CVE-2017-8834
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -30,12 +29,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 sha512sums="038a3ac9d160a8cf86a8a88c34367e154ef26ede289c93349332b7bc449a5199b51ea3611cebf3a2416ae23b9e45ecf8f9c6b24ea6d16a5519b796d3c7e272d4  libcroco-0.6.13.tar.xz
