--- a/community/libmodplug/APKBUILD
+++ b/community/libmodplug/APKBUILD
@@ -7,36 +7,24 @@ pkgdesc="A MOD playing library"
 url="http://modplug-xmms.sourceforge.net/"
 arch="all"
 license="custom"
-depends=
-makedepends=
-install=
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://downloads.sourceforge.net/modplug-xmms/$pkgname-$pkgver.tar.gz"
+source="https://downloads.sourceforge.net/modplug-xmms/libmodplug-$pkgver.tar.gz"
 
-_builddir="$srcdir"/$pkgname-$pkgver
-
-prepare() {
-	cd "$_builddir"
-	# apply patches here
-}
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--infodir=/usr/share/info \
-		|| return 1
-	make || return 1
+		--infodir=/usr/share/info
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
-	install -D -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+	make DESTDIR="$pkgdir" install
+	install -D -m644 COPYING $pkgdir/usr/share/licenses/$pkgname/LICENSE
 }
 
 sha512sums="880e10154fd367ee24ace53ca7e32a5c1fee7dfff1f934e6499944c12779427da63e2f55f8d6ce25db0a42a5b4424053bf64305b31dbfc4ef6a8909924d655fd  libmodplug-0.8.9.0.tar.gz"
