community/gcc6: added note about java-gcj-compat _gccpkgrel

--- a/community/gcc6/APKBUILD
+++ b/community/gcc6/APKBUILD
@@ -3,7 +3,7 @@ pkgname=gcc6
 pkgver=6.4.0
 _ver=${pkgver%%.*}
 pkgname="$pkgname"
-pkgrel=11
+pkgrel=11 # Update java-gcj-compat _gccpkgrel so it matchs!
 pkgdesc="The GNU Compiler Collection"
 url="https://gcc.gnu.org/"
 arch="all"
