main/meson: upgrade to 0.53.2

--- a/main/meson/APKBUILD
+++ b/main/meson/APKBUILD
@@ -1,14 +1,19 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=meson
-pkgver=0.53.1
-pkgrel=1
+pkgver=0.53.2
+pkgrel=0
 pkgdesc="Fast and user friendly build system"
 url="https://mesonbuild.com"
 arch="noarch"
 license="Apache-2.0"
 depends="samurai py3-setuptools python3"
-subpackages="$pkgname-doc $pkgname-vim::noarch"
+subpackages="
+	$pkgname-doc
+	$pkgname-vim::noarch
+	$pkgname-bash-completion:bashcomp:noarch
+	$pkgname-zsh-completion:zshcomp:noarch
+	"
 source="https://github.com/mesonbuild/meson/releases/download/$pkgver/meson-$pkgver.tar.gz
 	"
 
@@ -22,6 +27,9 @@ check() {
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
+
+	install -Dm644 data/shell-completions/zsh/* -t "$pkgdir"/usr/share/zsh/site-functions
+	install -Dm644 data/shell-completions/bash/* -t "$pkgdir"/usr/share/bash-completion/completions
 }
 
 vim() {
@@ -37,4 +45,20 @@ vim() {
 	done
 }
 
-sha512sums="0c96c354bcd7e6945473c7df0ddff929ef2bae9c2dfc7b48c6c6174c7f2be4f798398929f9c4d5986aa5fc882305ff76371ad0d65a499f058b33b05ff7025859  meson-0.53.1.tar.gz"
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	amove usr/share/bash-completion/completions
+}
+
+zshcomp() {
+	depends=""
+	pkgdesc="Zsh completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel zsh"
+
+	amove usr/share/zsh/site-functions
+}
+
+sha512sums="005340f0faaa8fc5065b916355af6c2e3311da59fae67c781eb9ca47c5430dca85e9aa1052c5e92b3da8546b4b197fe623a6d48b073a24e05535141ba59ecac7  meson-0.53.2.tar.gz"
