testing/upmpdcli: upgrade to 1.4.7

--- a/testing/upmpdcli/APKBUILD
+++ b/testing/upmpdcli/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Marvin Steadfast <marvin@xsteadfastx.org>
 # Maintainer: Marvin Steadfast <marvin@xsteadfastx.org>
 pkgname=upmpdcli
-pkgver=1.4.6
+pkgver=1.4.7
 pkgrel=0
 pkgdesc="upmpdcli is a UPnP Media Renderer front-end for MPD, the Music Player Daemon"
 url="http://www.lesbonscomptes.com/upmpdcli"
 arch="all !armhf !armv7"
-license="GPL-2.0"
+license="LGPL-2.1-or-later"
 options="!check"
 makedepends="libupnpp-dev libmpdclient-dev libmicrohttpd-dev jsoncpp-dev"
 subpackages="$pkgname-doc"
@@ -21,4 +21,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="35f728adc7cb1375d5a4ad6c3b3e70d5d43592d857a8aeece7e2923b27d01a83a2539075364dc38d8259b94735fb1e42f7c9c46a07102b3e8cf6ded761f2ba7f  upmpdcli-1.4.6.tar.gz"
+sha512sums="752870518415f8825f9c1a389397c4fa4c923f219039378e024091a38d3df3b3c2f1c5e944b50dfd2c2b98f8e91282ca2a6ab70ca298295b26e64e6992833e56  upmpdcli-1.4.7.tar.gz"
