--- a/testing/belcard/APKBUILD
+++ b/testing/belcard/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=belcard
-pkgver=4.3.0
+pkgver=4.3.1
 pkgrel=0
 pkgdesc="C++ library to manipulate VCard standard format"
 url="https://linphone.org"
@@ -14,7 +14,7 @@ source="https://www.linphone.org/releases/sources/belcard/belcard-$pkgver.tar.gz
 source="$pkgname-$pkgver.tar.gz::https://github.com/BelledonneCommunications/belcard/archive/$pkgver.tar.gz"
 
 build() {
-	cmake \
+	cmake -B build . \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DCMAKE_MODULE_PATH=/usr/lib/cmake \
@@ -22,13 +22,12 @@ build() {
 		-DENABLE_STRICT=NO \
 		-DENABLE_SHARED=YES \
 		-DENABLE_STATIC=NO \
-		-DENABLE_UNIT_TESTS=NO \
-		.
-	make
+		-DENABLE_UNIT_TESTS=NO
+	make -C build
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 dev() {
@@ -38,4 +37,4 @@ dev() {
 }
 
 
-sha512sums="d97f2912622d8713bc21e8b93252b6bcbf520afa91d17d8db78a981de1c19cb1818f3e6413b3da0bb3fc6a45fc8aa83f38fa1cea41df72e62fbb6494b3f63406  belcard-4.3.0.tar.gz"
+sha512sums="b88fc12a3d5854394bd447e30de1874365f467c7adf1084f8701297b693ead8a2d1c50429f5d854fcd11b778b5f56d1f2c05487a82e0a7c8fe6dcaebbb32dcad  belcard-4.3.1.tar.gz"
