--- a/community/gnome-characters/APKBUILD
+++ b/community/gnome-characters/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-characters
-pkgver=3.32.1
-pkgrel=2
+pkgver=3.34.0
+pkgrel=0
 pkgdesc="A simple utility application to find and insert unusual characters"
 url="https://wiki.gnome.org/Design/Apps/CharacterMap"
 arch="all !s390x" # gjs missing
@@ -10,7 +10,7 @@ license="BSD-3-Clause AND GPL-2.0-or-later"
 makedepends="meson gjs-dev glib-dev pango-dev gtk+3.0-dev libunistring-dev"
 options="!check" # no tests
 subpackages="$pkgname-lang"
-source="https://download.gnome.org/sources/gnome-characters/${pkgver%.*}/gnome-characters-${pkgver}.tar.xz"
+source="https://download.gnome.org/sources/gnome-characters/${pkgver%.*}/gnome-characters-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -27,4 +27,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="d2c18b136da6ab35938de4adf74ee6c3841f5f8e46f3b1ed2bbb8f9d0e953bba1dc43e105ae2aafc880f3cba37b75a55d274e6776d2bc17a5e30364f5d625537  gnome-characters-3.32.1.tar.xz"
+sha512sums="4dc2f0027c7079034d50c2743607391a0e529bcaf4f8fdd495b05aa776027609a43686f4621bcf30f09a29fa6f4d5fba6ed6166e51ab66f03dedf3032bc65632  gnome-characters-3.34.0.tar.xz"
