--- a/community/py3-qtwebengine/APKBUILD
+++ b/community/py3-qtwebengine/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=0
 pkgdesc="Python 3 bindings for QtWebEngine"
 url="https://www.riverbankcomputing.com/software/pyqtwebengine/intro"
 # ppc64le, s390x: not supported
-arch="all !ppc64le !s390x !armhf !armv7" # armhf blocked by py3-qt5 -> qt5-qtdeclarative
+arch="all !ppc64le !s390x !armhf" # armhf blocked by py3-qt5 -> qt5-qtdeclarative
 license="GPL-2.0-or-later"
 depends="python3"
 makedepends="python3-dev py3-qt5 qt5-qtwebengine-dev py-sip-dev"
