community/rclone: move from testing

--- a/community/rclone/APKBUILD
+++ b/community/rclone/APKBUILD
@@ -8,7 +8,7 @@ arch="all"
 license="MIT"
 makedepends="binutils-gold go"
 options="net"
-source="$pkgname-$pkgver.tar.gz::https://github.com/ncw/$pkgname/archive/v$pkgver.tar.gz"
+source="rclone-$pkgver.tar.gz::https://github.com/ncw/rclone/archive/v$pkgver.tar.gz"
 subpackages="$pkgname-doc"
 
 export GO111MODULE=on
