--- a/testing/mergerfs/APKBUILD
+++ b/testing/mergerfs/APKBUILD
@@ -3,7 +3,7 @@
 # NOTE: For now we must use vendored libfuse, see the URL below for details.
 #       https://github.com/trapexit/mergerfs/blob/2.27.0/README.md#why-was-libfuse-embedded-into-mergerfs
 pkgname=mergerfs
-pkgver=2.28.3
+pkgver=2.29.0
 pkgrel=0
 pkgdesc="A FUSE based union filesystem"
 url="https://github.com/trapexit/mergerfs"
@@ -11,7 +11,7 @@ arch="all"
 license="ISC"
 depends="libattr fuse"
 makedepends="autoconf automake libtool gettext-dev attr-dev linux-headers"
-options="!check" # No test suite
+options="suid !check" # No test suite
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/trapexit/mergerfs/archive/$pkgver.tar.gz"
 
@@ -29,4 +29,4 @@ package() {
 	make PREFIX="/usr" DESTDIR="$pkgdir" install
 }
 
-sha512sums="5469b3515464680aa72fc393c218fb038bed31194a933e6736eec478d87a110979323308b642d7f100a5c506534ca75badf4a87a050007cdc77cd2a641217929  mergerfs-2.28.3.tar.gz"
+sha512sums="2c21dedffc2f261c6c8427af59cffcacacc9b67bce7bb9989bd5946aa645c68bac0f56250ec19710e586a00892f7198853390bea3ff5981035d5a492ae4569a2  mergerfs-2.29.0.tar.gz"
