main/glslang: use git release with Vulkan 1.2 support

--- a/main/glslang/APKBUILD
+++ b/main/glslang/APKBUILD
@@ -2,36 +2,58 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=glslang
 pkgver=8.13.3559
-pkgrel=3
+pkgrel=4
+_commit=07e1a0a67aee5b21561bd6b93d73c8d87e010d98
 pkgdesc="Khronos reference front-end for GLSL, ESSL, and sample SPIR-V generator"
 options="!check" # Requires git checkout of gmock
 url="https://github.com/KhronosGroup/glslang"
 arch="all"
 license="BSD-3-Clause"
 depends_dev="$pkgname"
-makedepends="cmake samurai python3 bison"
+makedepends="cmake samurai python3 bison spirv-tools-dev"
 subpackages="$pkgname-static $pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/KhronosGroup/glslang/archive/$pkgver.tar.gz"
+source="$pkgname-$_commit.tar.gz::https://github.com/KhronosGroup/glslang/archive/$_commit.tar.gz
+	pkgconfig.patch
+	static.patch
+	"
+builddir="$srcdir/glslang-$_commit"
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
 		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
-	cmake \
-		-GNinja \
-		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_INSTALL_LIBDIR=lib \
-		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=None \
-		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
-		-DCMAKE_C_FLAGS="$CFLAGS" \
-		-DBUILD_SHARED_LIBS=ON \
-		${CMAKE_CROSSOPTS} .
-	ninja
+	mkdir -p build-shared build-static
+	(cd build-shared
+		cmake \
+			-GNinja \
+			-DCMAKE_INSTALL_PREFIX=/usr \
+			-DCMAKE_INSTALL_LIBDIR=lib \
+			-DCMAKE_BUILD_TYPE=None \
+			-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+			-DCMAKE_C_FLAGS="$CFLAGS" \
+			-DBUILD_SHARED_LIBS=ON \
+			${CMAKE_CROSSOPTS} ..
+		ninja
+	)
+	(cd build-static
+		cmake \
+			-GNinja \
+			-DCMAKE_INSTALL_PREFIX=/usr \
+			-DCMAKE_INSTALL_LIBDIR=lib \
+			-DCMAKE_BUILD_TYPE=None \
+			-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+			-DCMAKE_C_FLAGS="$CFLAGS" \
+			-DBUILD_SHARED_LIBS=OFF \
+			${CMAKE_CROSSOPTS} ..
+		ninja
+	)
 }
 
 package() {
-	DESTDIR="$pkgdir" ninja install
+	DESTDIR="$pkgdir" ninja -C build-shared install
+	DESTDIR="$pkgdir" ninja -C build-static install
 }
 
-sha512sums="d2f09888dd1b6edb4f324502627aeca0c78411f61ab50e672fa2a6d9ae46611849e1d13b9c6069b77f31092d843abcf3d74ed7cfc3c9144ced80e65876f4b781  glslang-8.13.3559.tar.gz"
+sha512sums="7d5cdf232b8f8f05c2546d030d28529d6943dff478ae27b53de0e54719663a254c104f6d7af51444a908a65925edf75c93d5d8886340f33212fb21da15d885fb  glslang-07e1a0a67aee5b21561bd6b93d73c8d87e010d98.tar.gz
+9490ed637a8f4a032fb0e0d266843b4ffccedce5983de1f16f96348c7b8340d4d8791f3a6a247f53ef5ea256deecf674d8cf0030d77b7d7d396091aed5bbb404  pkgconfig.patch
+842bd3bea38ccfb211c6f478ce0cb3f5f36de807e56d70dcfdcd606a52a230c9afa80d63d26e98900d33fd9fdb9228f1f61eeb9d02415bf355f28c505edce859  static.patch"
