testing/debconf: upgrade to 1.5.73

--- a/testing/debconf/APKBUILD
+++ b/testing/debconf/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: TBK <alpine@jjtc.eu>
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=debconf
-pkgver=1.5.71
+pkgver=1.5.73
 pkgrel=0
 pkgdesc="A configuration management system for Debian packages."
 url="https://packages.debian.org/debconf"
@@ -9,15 +9,20 @@ arch="noarch"
 license="BSD-2-Clause"
 options="!check" # Test suite is broken. CopyDBTestSetup is missing new method
 depends="perl"
-makedepends="coreutils findutils po4a"
+makedepends="coreutils diffutils findutils po4a"
+checkdepends="perl-freezethaw perl-ldap perl-test-unit"
 subpackages="$pkgname-doc $pkgname-lang $pkgname-utils $pkgname-bash-completion:bashcomp:noarch"
 source="https://deb.debian.org/debian/pool/main/d/debconf/debconf_$pkgver.tar.xz
 	fix-makefile_destdir.patch
 	"
-builddir="$srcdir/$pkgname"
+builddir="$srcdir/work"
 
 build() {
 	make
+}
+
+check() {
+	./test_debconf.pl --all
 }
 
 package() {
@@ -44,5 +49,5 @@ bashcomp() {
 	ln -s debconf debconf-show
 }
 
-sha512sums="ec6115a6aea78233e28f932f3eb6af62576b55211187a4253791c540ac74629029af01d95b5b382d01d51e1ae218760188a1eb865c04cc4d59a0006d8aa4c45b  debconf_1.5.71.tar.xz
-86c8c0995921a15b67881a7f68f8db4fc785ebc05a03619f597bd71e3cfb628c0c5678b263d42715eded50c3c8b80a7e49a9671949a5f423936fc8801b262b9a  fix-makefile_destdir.patch"
+sha512sums="fa2e240842f4f020df031ef37803c22a680372b996302372dfd3377bf21723f2e949167f9ea13ebad5c1c516052c26adcd627d152a62110ccddd3a9e2b892bdc  debconf_1.5.73.tar.xz
+17094b77ccf7922daf28dbf2eba84a322ac8ca265a41403b963d97ea4c1c16d8e530bcb3414f9b1bca88cbc5f726d2401376ee20674547d7b528c52d8f496f8c  fix-makefile_destdir.patch"
