community/shaderc: upgrade to 2019.1

--- a/community/shaderc/APKBUILD
+++ b/community/shaderc/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=shaderc
-pkgver=2019.0
-pkgrel=2
+pkgver=2019.1
+pkgrel=0
 pkgdesc="A collection of tools, libraries, and tests for Vulkan shader compilation"
 options="!check" # Fails to configure when tests are enabled
 url="https://github.com/google/shaderc"
@@ -12,38 +12,35 @@ makedepends="cmake glslang-static glslang-dev spirv-tools-dev python3"
 subpackages="$pkgname-static $pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/google/shaderc/archive/v$pkgver.tar.gz
 	fix-link-order.patch
-	fix-build.patch
+	enum.patch
+	third-party.patch
+	fix-includes.patch
 	"
 
 prepare() {
 	default_prepare
-	# Unbundle glslang, SPIRV-Headers and SPIRV-Tools, also don't build examples
-	sed -i \
-		-e '/add_subdirectory(third_party)/d' \
-		-e '/add_subdirectory(examples)/d' CMakeLists.txt
 
-	# Disable git versioning
-	sed -i -e '/build-version/d' glslc/CMakeLists.txt
+	rm -rf third_party
+
+	_glslang_ver="$( . $startdir/../../*/glslang/APKBUILD; echo $pkgver)"
+	_spirv_ver="$( . $startdir/../../*/spirv-tools/APKBUILD; echo $pkgver)"
 
 	# Create our own build-version.inc since we disabled git versioning
 	# need to keep this in sync with glslang and SPIRV-Tools versions
 	# this is displayed with 'glslc --version'
 	cat <<- EOF > glslc/src/build-version.inc
-		"shaderc 2019.0\n"
-		"SPIRV-Tools-2019.3\n"
-		"glslang-7.11.3214\n"
+		"shaderc $pkgver\n"
+		"SPIRV-Tools $_spirv_ver\n"
+		"glslang $_glslang_ver\n"
 	EOF
-
-	mkdir -p "$builddir"/build
 }
 
 build() {
-	cd build
-
+	export CXXFLAGS="$CXXFLAGS -I/usr/include/glslang"
 	if [ "$CBUILD" != "$CHOST" ]; then
 		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
-	cmake \
+	cmake -B build . \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
@@ -52,14 +49,16 @@ build() {
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DSHADERC_SKIP_TESTS=ON \
 		-DSHADERC_ENABLE_NV_EXTENSIONS=OFF \
-		${CMAKE_CROSSOPTS} ..
-	make
+		$CMAKE_CROSSOPTS
+	make -C build
 }
 
 package() {
 	make -C build DESTDIR="$pkgdir" install
 }
 
-sha512sums="c76887ad0a96145211b6550b0dfe63091df9e1463f9a3140aba2d1982c33e98ad14fb4bcf9ce2281433fc77626fc892c268d0636b9f348a159dd06e3f41b461a  shaderc-2019.0.tar.gz
+sha512sums="dc4d617a6619fa6f743827fbec4065e51190e5516fbef59c7fb450740732524fc81ad22ad60a58488d84b45f24e459b71922e37fa05b4c06e0ddd0b59d46c315  shaderc-2019.1.tar.gz
 bd24c90b93bf8bd7e56682e02543ff8a5c988549e76502144c2f4904e96b67ca0bc9d1e94b811bcdad1e765625256d3feabeb20ca299f2abb220e6e398d5a590  fix-link-order.patch
-b0231c8e39b9755444d74855d79f9aa0aad038c652a83f8c316d2e75cf7084a775151e6ecd367340a92c568f86b9e89112338fcd0b37976e383db6a0f8ff5952  fix-build.patch"
+d09a23d98278cdef6535c189fc331f092ac185f444ce673a5ea8acba06b791ca8565188ee33d4ec2ec0bd4d1852dc00523fdfdff93b89ff8013b4a745a71cac9  enum.patch
+5c5171ef2561070fece6b4cfa087f5baace7e5f828443719570494d9adc39ad724a414da7570f38629dbc9e7b563c8ad8226143c907ce7139a87615098006585  third-party.patch
+07e4662de3049157d82cd5283c1831c136ff033bf91daea24c655012916f0b21dd4a8ae10f9b0200e904957495617731c8433dd168e687e7daeafe27d8924a41  fix-includes.patch"
