--- a/main/py3-pygments/APKBUILD
+++ b/main/py3-pygments/APKBUILD
@@ -3,9 +3,9 @@
 pkgname=py3-pygments
 _pkgname=Pygments
 pkgver=2.5.2
-pkgrel=0
-pkgdesc="A syntax highlighting package written in Python."
-url="http://pygments.org/"
+pkgrel=1
+pkgdesc="A syntax highlighting package written in Python"
+url="https://pygments.org/"
 arch="noarch"
 license="BSD-2-Clause"
 depends="python3 py3-setuptools"
