community/spirv-headers: fix location of cmake files

--- a/community/spirv-headers/APKBUILD
+++ b/community/spirv-headers/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=spirv-headers
 _pkgname=SPIRV-Headers
 pkgver=1.5.1
-pkgrel=4
+pkgrel=5
 pkgdesc="Machine-readable files for the SPIR-V Registry"
 options="!check" # No testsuite
 url="https://github.com/KhronosGroup/SPIRV-Headers"
@@ -20,6 +20,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_LIBDIR=lib \
 		${CMAKE_CROSSOPTS} .
 	ninja
 }
