main/pigz: modernize

--- a/main/pigz/APKBUILD
+++ b/main/pigz/APKBUILD
@@ -1,31 +1,26 @@
-# Contributor: 
-# Maintainer: 
+# Contributor:
+# Maintainer:
 pkgname=pigz
 pkgver=2.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Parallel implementation of gzip"
-url="http://zlib.net/pigz/"
+url="https://zlib.net/pigz/"
 arch="all"
-license="zlib"
+license="Zlib"
 makedepends="zlib-dev"
 subpackages="$pkgname-doc"
 source="https://zlib.net/pigz/pigz-$pkgver.tar.gz"
 
-builddir="$srcdir/$pkgname-$pkgver"
-
 build() {
-	cd "$builddir"
 	export CXXFLAGS="$CXXFLAGS -std=gnu++98"
 	make
 }
 
 check() {
-	cd "$builddir"
 	make tests
 }
 
 package() {
-	cd "$builddir"
 	mkdir -p "$pkgdir"/usr/bin
 	mkdir -p "$pkgdir"/usr/share/man/man1
 	for i in pigz unpigz; do
