--- a/main/pwgen/APKBUILD
+++ b/main/pwgen/APKBUILD
@@ -1,20 +1,21 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=pwgen
 pkgver=2.08
-pkgrel=0
+pkgrel=1
 pkgdesc="A Password Generator"
-url="https://sourceforge.net/projects/pwgen/"
+url="https://github.com/tytso/pwgen"
 arch="all"
-license="GPL"
-depends=""
-makedepends=""
-install=""
+license="GPL-2.0-only"
+options="!check" # no test suite
+makedepends="autoconf"
 subpackages="$pkgname-doc"
-source="https://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/tytso/pwgen/archive/v2.08.tar.gz"
 
-_builddir="$srcdir"/$pkgname-$pkgver
+prepare() {
+	autoconf
+}
+
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -22,13 +23,11 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
-		|| return 1
-	make || return 1
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="4a930dc7d4c58a4434209db30c54629d76fce57d0fd5767cd7894168bb1a5b85eaae6734a982b0f4e0640540c366ce27ad84860ff2c406dea3f5902b5bb54255  pwgen-2.08.tar.gz"
+sha512sums="cef7860c820ab1b069fbba53c1c85d6fa23bba67b0f0befdcca95d5f6c7aa09673b4777fb5ac8eca012ba939e2486a740c72109a9692314a677eb5c5da47f3f3  pwgen-2.08.tar.gz"
