testing/mozjs68: enable config options recommended by GJS upstream
See https://mail.gnome.org/archives/distributor-list/2020-February/msg00000.html

--- a/testing/mozjs68/APKBUILD
+++ b/testing/mozjs68/APKBUILD
@@ -2,8 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=mozjs68
 pkgver=68.5.0
-_majver=${pkgver%%.*}
-pkgrel=1
+pkgrel=2
 pkgdesc="Standalone Mozilla JavaScript engine"
 url="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey"
 arch="x86_64 armv7 armhf aarch64 x86 ppc64le" # limited by rust and cargo
@@ -101,7 +100,8 @@ build() {
 		--disable-debug \
 		--disable-debug-symbols \
 		--disable-jemalloc \
-		--disable-strip
+		--disable-strip \
+		--enable-unaligned-private-values
 	make
 }
 
