testing/py3-billiard: upgrade to 3.6.3.0

--- a/testing/py3-billiard/APKBUILD
+++ b/testing/py3-billiard/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=py3-billiard
-pkgver=3.6.2.0
+pkgver=3.6.3.0
 pkgrel=0
 pkgdesc="a message queue abstraction layer"
 url="https://pypi.python.org/pypi/billiard/"
@@ -19,11 +19,18 @@ build() {
 }
 
 check() {
-	python3 setup.py test
+	# Uses wrong name for 'queue' module.
+	# Uses internal 'test' and 'test.support' modules.
+	rm -f t/integration/tests/test_multiprocessing.py
+
+	# Windows only
+	rm -f t/unit/test_win32.py
+
+	py.test-3
 }
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="ff04ac024ddca935fb9713226d288b4b3bf856ae52948f86c061e291c163343af34bf545f0b5ec727e643ba6566004d3b5a4684509b5169e0e45e8a64998219a  billiard-3.6.2.0.tar.gz"
+sha512sums="8fde933c7f605aa4958a6f9da7aa876f42ef7250845b113fc175f8e8af1760063ac6b2a7a222d2c0bac4715f18986a2ee1a5528cc14925b2060dca8a5bd2333c  billiard-3.6.3.0.tar.gz"
