main/unzip: disable LCHMOD
lchmod is not available on linux, but it's enabled by default. This
leads to warnings while unpacking when the zip file contains symlinks:

> lchmod (file attributes) error: Not supported

Add `-DNO_LCHMOD` to the buildflags to disable this function in order to
to squelch this warning.

Fixes #11221

--- a/main/unzip/APKBUILD
+++ b/main/unzip/APKBUILD
@@ -43,7 +43,7 @@ build() {
 
 	make -f unix/Makefile \
 		CC="${CHOST}-gcc" \
-		LOCAL_UNZIP="${CFLAGS} ${CPPFLAGS}" \
+		LOCAL_UNZIP="${CFLAGS} ${CPPFLAGS} -DNO_LCHMOD" \
 		prefix=/usr generic
 }
 
