community/sway{,bg,idle,lock}: update url to use https

--- a/community/sway/APKBUILD
+++ b/community/sway/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=sway
 pkgver=1.4
-pkgrel=2
+pkgrel=3
 pkgdesc="i3 compatible window manager for Wayland"
-url="http://swaywm.org"
+url="https://swaywm.org"
 arch="all"
 license="MIT"
-options="suid !check"
+options="suid !check" # no test suite
 depends="swaybg"
 makedepends="cairo-dev
 	gdk-pixbuf-dev
