--- a/community/swaybg/APKBUILD
+++ b/community/swaybg/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=swaybg
 pkgver=1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Wallpaper daemon for Wayland"
-url="http://swaywm.org"
+url="https://swaywm.org"
 arch="all"
 license="MIT"
-options="!check"
+options="!check" # no test suite
 makedepends="cairo-dev
 	gdk-pixbuf-dev
 	libxkbcommon-dev
@@ -18,17 +18,14 @@ makedepends="cairo-dev
 	wayland-protocols
 	"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/$pkgname/archive/$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/swaybg/archive/$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	meson -Dswaybg-version="$pkgver" --prefix /usr build
 	ninja -C build
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
