--- a/community/swayidle/APKBUILD
+++ b/community/swayidle/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=swayidle
 pkgver=1.6
-pkgrel=0
+pkgrel=1
 pkgdesc="Idle management daemon for Wayland"
-url="http://swaywm.org"
+url="https://swaywm.org"
 arch="all"
 license="MIT"
-options="!check" # no test suite included
+options="!check" # no test suite
 makedepends="
 	elogind-dev
 	meson
