--- a/community/swaylock/APKBUILD
+++ b/community/swaylock/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=swaylock
 pkgver=1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Screen locker for Wayland"
-url="http://swaywm.org"
+url="https://swaywm.org"
 arch="all"
 license="MIT"
-options="!check"
+options="!check" # no test suite
 makedepends="cairo-dev
 	gdk-pixbuf-dev
 	libxkbcommon-dev
