testing/gkraken: upgrade to 0.14.0

--- a/testing/gkraken/APKBUILD
+++ b/testing/gkraken/APKBUILD
@@ -1,15 +1,14 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gkraken
-pkgver=0.13.0
-pkgrel=3
+pkgver=0.14.0
+pkgrel=0
 pkgdesc="GUI that allows to control cooling of NZXT Kraken X pumps from Linux"
 url="https://gitlab.com/leinardi/gkraken"
 arch="noarch"
 license="GPL-3.0-or-later"
 depends="python3 libdazzle libnotify py3-gobject3 py3-rx liquidctl py3-injector
-	py3-matplotlib py3-peewee py3-xdg
-"
+	py3-matplotlib py3-peewee py3-xdg"
 makedepends="meson gobject-introspection-dev gtk+3.0-dev"
 options="!check" # no tests
 source="https://gitlab.com/leinardi/gkraken/-/archive/$pkgver/gkraken-$pkgver.tar.gz
@@ -34,6 +33,6 @@ package() {
 	install -m644 "$srcdir"/60-gkraken.rules "$pkgdir"/usr/lib/udev/rules.d/60-gkraken.rules
 }
 
-sha512sums="615d3104d258cde08a9cfa1625a6c9368ab1788fb5777ab897c744e88ea1fb4cf8f6edd20395645bffe2171cc6c4e21c10ddfe66c7657184edd0c374f7bfae56  gkraken-0.13.0.tar.gz
+sha512sums="adece1bf979dab9a2c9beb076666c7572cfb0d01c8bdd476f75d5b24291f0b3fca7196460a0396344af24fe8439ef6ae0f1c8951ca651d3978fc53a8465a6235  gkraken-0.14.0.tar.gz
 25f658d75366300cf72d954024937b251c058fba8de531c3cfcbf0597f8ab1c7822f8e422146284d9f79c5f7e94cd5f476a5161389f828b112f8847cd73295a6  60-gkraken.rules
 2b255e29e50fae08880f99940c2f4eeba59da7371f6874adf2607895909c1bd274cd149d56d0530041c67ceeafa4b028cf47c6b0605fc1dede00104bb0e6b4e5  no-gettext-python-support.patch"
