--- a/testing/openvpn-auth-ldap/APKBUILD
+++ b/testing/openvpn-auth-ldap/APKBUILD
@@ -5,7 +5,7 @@ pkgver=2.0.4
 pkgrel=0
 pkgdesc="Username/password authentication via LDAP for OpenVPN 2.x"
 url="https://github.com/threerings/openvpn-auth-ldap/"
-arch="all"
+arch="all !x86 !s390x"  # disabled due to TEXTREL
 license="BSD-3-Clause"
 depends="openvpn"
 makedepends="autoconf automake gcc-objc openldap-dev openvpn-dev re2c"
