main/glslang: fix linking of DefaultTBuiltInResource

--- a/main/glslang/APKBUILD
+++ b/main/glslang/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=glslang
 pkgver=8.13.3559
-pkgrel=4
+pkgrel=5
 _commit=07e1a0a67aee5b21561bd6b93d73c8d87e010d98
 pkgdesc="Khronos reference front-end for GLSL, ESSL, and sample SPIR-V generator"
 options="!check" # Requires git checkout of gmock
@@ -14,6 +14,7 @@ makedepends="cmake samurai python3 bison spirv-tools-dev"
 subpackages="$pkgname-static $pkgname-dev"
 source="$pkgname-$_commit.tar.gz::https://github.com/KhronosGroup/glslang/archive/$_commit.tar.gz
 	pkgconfig.patch
+	default-resources.patch
 	"
 builddir="$srcdir/glslang-$_commit"
 
@@ -34,6 +35,7 @@ build() {
 			${CMAKE_CROSSOPTS} ..
 		ninja
 	)
+	sed -i '/add_library(glslang-default-resource-limits/ s/$/ STATIC/' StandAlone/CMakeLists.txt
 	(cd build-static
 		cmake \
 			-GNinja \
@@ -55,4 +57,4 @@ package() {
 
 sha512sums="7d5cdf232b8f8f05c2546d030d28529d6943dff478ae27b53de0e54719663a254c104f6d7af51444a908a65925edf75c93d5d8886340f33212fb21da15d885fb  glslang-07e1a0a67aee5b21561bd6b93d73c8d87e010d98.tar.gz
 9490ed637a8f4a032fb0e0d266843b4ffccedce5983de1f16f96348c7b8340d4d8791f3a6a247f53ef5ea256deecf674d8cf0030d77b7d7d396091aed5bbb404  pkgconfig.patch
-842bd3bea38ccfb211c6f478ce0cb3f5f36de807e56d70dcfdcd606a52a230c9afa80d63d26e98900d33fd9fdb9228f1f61eeb9d02415bf355f28c505edce859  static.patch"
+f526443c070fc3e4639cdec0a4876e5a75529af4cf41282ba23b0d9234434f764bf55b93aaaf7ed1de757193842f3d0b51437cf62c41d955dd86907fcc1a911e  default-resources.patch"
