main/syslog-ng: update url

--- a/main/syslog-ng/APKBUILD
+++ b/main/syslog-ng/APKBUILD
@@ -5,9 +5,9 @@
 # Maintainer: jv <jens@eisfair.org>
 pkgname=syslog-ng
 pkgver=3.25.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Next generation logging daemon"
-url="http://www.balabit.com"
+url="https://www.syslog-ng.com/products/open-source-log-management/"
 arch="all"
 license="GPL-2.0-or-later"
 options="!check" # unit tests require https://github.com/Snaipe/Criterion with deps
