testing/faultstat: upgrade to 0.01.03

--- a/testing/faultstat/APKBUILD
+++ b/testing/faultstat/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Milan P. Stanić <mps@arvanta.net>
 # Maintainer: Milan P. Stanić <mps@arvanta.net>
 pkgname=faultstat
-pkgver=0.01.02
+pkgver=0.01.03
 pkgrel=0
 pkgdesc="page fault monitoring tool"
 url="https://github.com/ColinIanKing/faultstat"
@@ -9,9 +9,8 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="ncurses-dev"
 options="!check" # pkg doesn't have tests
-subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/ColinIanKing/$pkgname/archive/V${pkgver}.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+subpackages="$pkgname-doc $pkgname-bash-completion:bashcomp:noarch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/ColinIanKing/faultstat/archive/V$pkgver.tar.gz"
 
 build() {
 	make
@@ -19,6 +18,16 @@ build() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+
+	install -Dm644 bash-completion/* -t "$pkgdir"/usr/share/bash-completion/completions
 }
 
-sha512sums="d951c2fe4a92d77794be1496d9a1c65d3c4b322c8a64c2ea14dc6f1d8d7cc65d835d309d1274b03dd9d9e1180d42e23bc6d12316a80552c47344e0d3a1e497ae  faultstat-0.01.02.tar.gz"
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	amove usr/share/bash-completion
+}
+
+sha512sums="de0e934862c335640943115d80ad94947f7377f99c0a28c6843999d216fae009d8275df052fd8a58a3f025cbea8f67a52b2e33678c43bb55879ed1e522ba4e76  faultstat-0.01.03.tar.gz"
