testing/py3-scikit-learn: update url to use https

--- a/testing/py3-scikit-learn/APKBUILD
+++ b/testing/py3-scikit-learn/APKBUILD
@@ -3,9 +3,9 @@
 pkgname=py3-scikit-learn
 _pkgname=scikit-learn
 pkgver=0.22.1
-pkgrel=0
+pkgrel=1
 pkgdesc="a Python module for machine learning built on top of SciPy"
-url="http://scikit-learn.org/"
+url="https://scikit-learn.org"
 arch="all"
 license="BSD-3-Clause"
 options="!check" # No test suite
