testing/py3-regex: upgrade to 2020.2.20

--- a/testing/py3-regex/APKBUILD
+++ b/testing/py3-regex/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-regex
-pkgver=2020.2.18
+pkgver=2020.2.20
 pkgrel=0
-pkgdesc="A more featureful implementation of the 're' module"
+pkgdesc="More featureful implementation of the 're' module"
 url="https://bitbucket.org/mrabarnett/mrab-regex"
 arch="all"
 license="CNRI-Python"
 depends="python3"
-makedepends="python3-dev"
+makedepends="python3-dev py3-setuptools"
 options="!check" # no tests
 source="https://files.pythonhosted.org/packages/source/r/regex/regex-$pkgver.tar.gz"
 builddir="$srcdir/regex-$pkgver"
@@ -21,4 +21,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="4a3eeeebcd564f0ba4ec84e0699388c80f1abfd0468e6805a504ed6c541d0ea6a2bf734bbd33668f85beede42be3beefac6c1cfb4cd3d2a07504046b51219aa3  regex-2020.2.18.tar.gz"
+sha512sums="0a35b9512048bd36bcbf8a03905cc77f007d204f9ed9a0aaa3d5fcd72392bf37285c35ec0f04b1520e486b651028063c799ec265782c52ca4ecf7eeb0581727a  regex-2020.2.20.tar.gz"
