community/tvheadend: change pkggroup to video

--- a/community/tvheadend/APKBUILD
+++ b/community/tvheadend/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
 pkgname=tvheadend
 pkgver=4.2.8
-pkgrel=1
+pkgrel=2
 pkgdesc="TV Streaming server for linux"
 url="http://tvheadend.org/"
 arch="all"
@@ -9,7 +9,7 @@ license="GPL-3.0-only"
 makedepends="findutils bash git python3 linux-headers bsd-compat-headers
 	coreutils openssl-dev ffmpeg-dev gettext-dev zlib-dev cmake"
 pkgusers="tvheadend"
-pkggroups="tvheadend"
+pkggroups="video"
 install="$pkgname.pre-install"
 options="!check" # no testsuites
 subpackages="$pkgname-doc $pkgname-openrc"
