--- a/community/nuspell/APKBUILD
+++ b/community/nuspell/APKBUILD
@@ -2,12 +2,13 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=nuspell
 pkgver=3.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Free and open source C++ spell checking library"
 url="https://nuspell.github.io/"
 arch="all"
 license="LGPL-3.0-or-later"
-makedepends="cmake icu-dev boost-dev ronn catch2"
+depends_dev="boost-dev"
+makedepends="$depends_dev cmake icu-dev ronn catch2"
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://github.com/nuspell/nuspell/archive/v$pkgver/nuspell-$pkgver.tar.gz"
 
