community/enchant2: upgrade to 2.2.8
Replace hunspell with its more lightweight drop-in nuspell

--- a/community/enchant2/APKBUILD
+++ b/community/enchant2/APKBUILD
@@ -1,14 +1,13 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=enchant2
-pkgver=2.2.7
+pkgver=2.2.8
 pkgrel=0
 pkgdesc="A wrapper library for generic spell checking (v2)"
 url="https://abiword.github.io/enchant/"
 arch="all"
 license="LGPL-2.1-or-later"
 subpackages="$pkgname-dev $pkgname-doc"
-makedepends="aspell-dev glib-dev dbus-glib-dev hunspell-dev gettext-dev file
-	bash"
+makedepends="aspell-dev glib-dev dbus-glib-dev gettext-dev file bash nuspell-dev"
 options="!check" # needs unpackaged unittest-cpp
 source="https://github.com/AbiWord/enchant/releases/download/v$pkgver/enchant-$pkgver.tar.gz"
 builddir="$srcdir/enchant-$pkgver"
@@ -18,7 +17,8 @@ build() {
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--disable-static
+		--disable-static \
+		--with-nuspell
 	make
 }
 
@@ -30,4 +30,4 @@ package() {
 	make DESTDIR="$pkgdir" pkgdatadir=/usr/share/enchant-2 install
 }
 
-sha512sums="696455cf782b3186d19988ed59ca3cc6030a431d44ef3828039590afb08fd282a79ce6246a342e6bf7a0bf3bf63d4822d841ba01394da9f9e4394a491b2373b6  enchant-2.2.7.tar.gz"
+sha512sums="4bfa771af0deab3d0ca5523abab1fdb14cb596747dba7cf887e8cd812601015f52502cbd3df68247f102bba259cb281414e9ccde83b8bdd3c8cc83c2fcbc9090  enchant-2.2.8.tar.gz"
