testing/kpmcore: add missing sfdisk dependency

--- a/testing/kpmcore/APKBUILD
+++ b/testing/kpmcore/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kpmcore
 pkgver=4.1.0
-pkgrel=1
+pkgrel=2
 arch="all !armhf"
 url="https://kde.org/applications/system/org.kde.partitionmanager"
 pkgdesc="Library for managing partitions"
 license="GPL-3.0-or-later"
+depends="sfdisk smartmontools"
 makedepends="extra-cmake-modules qt5-qtbase-dev kauth-dev kcoreaddons-dev ki18n-dev kwidgetsaddons-dev qca-dev"
 source="https://download.kde.org/stable/kpmcore/$pkgver/src/kpmcore-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
