--- a/main/lvm2/APKBUILD
+++ b/main/lvm2/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=lvm2
 pkgver=2.02.186
-pkgrel=0
+pkgrel=1
 pkgdesc="Logical Volume Manager 2 utilities"
 url="https://sourceware.org/lvm2/"
 arch="all"
@@ -94,6 +94,7 @@ dm() {
 
 udev() {
 	pkgdesc="Device mapper udev rules"
+	install="$subpkgname.post-install $subpkgname.post-upgrade"
 	install_if="device-mapper eudev"
 	mkdir -p "$subpkgdir"/usr/lib/udev
 	mv "$pkgdir"/usr/lib/udev/rules.d "$subpkgdir"/usr/lib/udev/
