--- a/community/py3-automat/APKBUILD
+++ b/community/py3-automat/APKBUILD
@@ -2,27 +2,25 @@
 # Contributor: Tiago Ilieve <tiago.myhro@gmail.com>
 # Maintainer: Tiago Ilieve <tiago.myhro@gmail.com>
 pkgname=py3-automat
-_pkgname=Automat
-pkgver=0.8.0
-pkgrel=1
+pkgver=20.2.0
+pkgrel=0
 pkgdesc="Self-service finite-state machines for the programmer on the go"
 url="https://automat.readthedocs.io/"
 arch="noarch"
 license="MIT"
 depends="py3-attrs py3-six"
-makedepends="py3-setuptools"
+makedepends="py3-setuptools py3-setuptools_scm"
 checkdepends="py3-pytest py3-pluggy"
-source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
-builddir="$srcdir/$_pkgname-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/glyph/automat/archive/v$pkgver.tar.gz"
+builddir="$srcdir/automat-$pkgver"
 
 replaces="py-automat" # Backwards compatibility
 provides="py-automat=$pkgver-r$pkgrel" # Backwards compatibility
 
 prepare() {
-	sed -i setup.py \
-		-e "/print(/d" \
-		-e "/setup_requires=/,+3d" \
-		-e "s/use_scm_version=True/version='${pkgver}'/"
+	default_prepare
+
+	export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
 }
 
 build() {
@@ -37,4 +35,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="2dbd4e784f65b02a8c93fc5f15236df3649d667a9792f6cac929dbac5d971495bdab4825df0fcd6817b9a9f79b7a5d8cfbdf8e4d18605f0761546b31b3091ad7  Automat-0.8.0.tar.gz"
+sha512sums="ccba3e82f589fedb1f83dfb37a6a42b51a78d8c3e6fea22c9518135ff194f5f70e2f9c5f0eab50b6e116dae92c94754aac8dbf0e670a59015c916991736b4076  py3-automat-20.2.0.tar.gz"
