--- a/testing/py3-thinc/APKBUILD
+++ b/testing/py3-thinc/APKBUILD
@@ -1,13 +1,14 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=py3-thinc
-pkgver=7.3.1
-pkgrel=1
+pkgver=7.4.0
+pkgrel=0
 pkgdesc="Practical Machine Learning for NLP"
 url="https://github.com/explosion/thinc"
 arch="x86_64 x86"
 license="MIT"
-depends="python3 py3-cymem py3-preshed py3-murmurhash py3-blis py3-plac py3-srsly py3-wasabi"
+depends="python3 py3-cymem py3-preshed py3-murmurhash py3-blis py3-plac py3-srsly
+	py3-wasabi py3-catalogue"
 makedepends="python3-dev py3-setuptools cython"
 checkdepends="py3-pytest py3-numpy py3-mock py3-tqdm py3-hypothesis"
 subpackages="$pkgname-doc"
@@ -32,4 +33,4 @@ package() {
 	install -Dm644 README.md "$pkgdir/usr/share/doc/$pkgname/README.md"
 }
 
-sha512sums="a2aafb1c0d38c4146578f6ac15db93adf839bb7aaf173dd9aaf829eab0e6d682ca30659231d08926dccec4ba4f76bf1d01a2b2762aa8dbe9da21b8886d06d368  thinc-7.3.1.tar.gz"
+sha512sums="4eba0d69adfa0c1dee66ede5bde41369006a8d923fa381e74c0dab2cb4bec7188c48fdeadb269778ad250ea38a8008acac71727f66b0db24abae86b80c587066  thinc-7.4.0.tar.gz"
