community/py3-pyhamcrest: upgrade to 2.0.1

--- a/community/py3-pyhamcrest/APKBUILD
+++ b/community/py3-pyhamcrest/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: prspkt <prspkt@protonmail.com>
 pkgname=py3-pyhamcrest
 _pkgname=PyHamcrest
-pkgver=2.0.0
+pkgver=2.0.1
 pkgrel=0
 pkgdesc="Hamcrest framework for matcher objects"
 url="https://github.com/hamcrest/PyHamcrest"
@@ -14,8 +14,8 @@ checkdepends="py3-hypothesis py3-mock py3-pytest"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/hamcrest/PyHamcrest/archive/V$pkgver.tar.gz"
 builddir="$srcdir/"$_pkgname-$pkgver
 
-replaces="py3-hamcrest" # Backwards compatibility
-provides="py3-hamcrest=$pkgver-r$pkgrel" # Backwards compatibility
+replaces="py-hamcrest" # Backwards compatibility
+provides="py-hamcrest=$pkgver-r$pkgrel" # Backwards compatibility
 
 prepare() {
 	default_prepare
@@ -34,4 +34,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="32683422c92f27ffbdb081cfeb588a81bd299fd965e3fdd67a5aca2900e0a89da0fa217b22f4333511831921953519d75861b18fcb164d1ec6cacf13994df5e3  PyHamcrest-2.0.0.tar.gz"
+sha512sums="29e85e83b1d7ed691f4fd9e21172149cd6bea702d5838208023641e68585b42a48106122574d6238b40cbb40601273e6202e6cf3a91b71f03d80f3dc1c72f94e  PyHamcrest-2.0.1.tar.gz"
